# Course-2

./: README.md
Lab_1/: ComputerAlgebraInterface.h  ISparseContainer.h  MathExpression.h  MathFunction.h  Sequence.h  SparseList.h  SparseMatrix.h  main.cpp
Lab_2/: CMakeLists.txt  Context.cpp  Context.h  ContextDialog.cpp  ContextDialog.h  DataManager.cpp  DataManager.h  ExportDialog.cpp  ExportDialog.h  MainWindow.cpp  MainWindow.h  Reference.cpp  Reference.h  ReferenceDialog.cpp  ReferenceDialog.h
Project/: CMakeLists.txt  main.cpp  Звіт для 3лаб.docx
